--- a/SwiftMos/zh-Hans.lproj/Localizable.strings
+++ b/SwiftMos/zh-Hans.lproj/Localizable.strings
@@ -34,4 +34,4 @@
 "c.reset" = "恢复为默认值";
 
 "c.slogan" = "SwiftMos 是 [Mos](http://mos.caldis.me/) 的复制品";
-"c.description" = "在 MacOS 上平滑鼠标滚动效果、单独设置滚动方向，让你的滚轮爽如触控板";
+"c.description" = "在 macOS 上平滑鼠标滚动效果、单独设置滚动方向，让你的滚轮爽如触控板";
